IJRAH-313: Fixed col alignment

--- a/src/main/resources/css/hub-jira-issue-panel.css
+++ b/src/main/resources/css/hub-jira-issue-panel.css
@@ -27,8 +27,13 @@
     text-align: left;
 }
 
-.wrap {
+.hubWrap {
 	padding: 0 10px 0 0px;
+}
+
+.fiftyPercent {
+	width: 50%;
+	box-sizing: border-box;
 }
 
 #hubFields > div {
